docs: Fix image rout

--- a/templates/view_all_product.html
+++ b/templates/view_all_product.html
@@ -14,7 +14,7 @@
 <table>
 
 {% if not products %}
-<p>Belum ada data mood pada mental health tracker.</p>
+<p>There isn't any data yet</p>
 {% else %}
 
 <table>
