fix: Upload image fixed

--- a/templates/view_all_product.html
+++ b/templates/view_all_product.html
@@ -34,7 +34,7 @@
 <td>{{product.description}}</td>
 <td>
     {% if product.photo %}
-    <img src="{{ product.photo.url }}">
+    <img src="{{ product.photo.url }}" style="max-width: 10rem;">
     {% endif %}
 </td>
 </tr>
