--- a/templates/create_product.html
+++ b/templates/create_product.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h1>Add New Product</h1>
 
-<form method="POST">
+<form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <table>
         {{ form.as_table }}
