feat: Tugas4 done

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -31,3 +31,9 @@ button {
 button:hover {
     background-color: #444444;
 }
+
+.row {
+    display: flex;
+    align-items: baseline;
+    gap: 10px;
+}
