--- a/templates/view_all_product.html
+++ b/templates/view_all_product.html
@@ -2,11 +2,6 @@
 {% block content %}
 <h1>Asadel Store</h1>
 
- <!-- 
-    Cari cara untuk bisa update style.css nya, style div itu diganti row aja
-    ATAU langsung pake tailwind aja :v
- -->
-
 <div style="display: flex; align-items: baseline; gap: 10px;">
     <h5>NPM: </h5>
     <p>{{ npm }}<p>
@@ -41,15 +36,29 @@
 
 {% for product in products %}
 <tr>
-<td>{{product.name}}</td>
-<td>{{product.price}}</td>
-<td>{{product.stock_available}}</td>
-<td>{{product.description}}</td>
-<td>
-    {% if product.photo %}
-    <img src="{{ product.photo.url }}" style="max-width: 10rem;">
-    {% endif %}
-</td>
+    <td>{{product.name}}</td>
+    <td>{{product.price}}</td>
+    <td>{{product.stock_available}}</td>
+    <td>{{product.description}}</td>
+    <td>
+        {% if product.photo %}
+        <img src="{{ product.photo.url }}" style="max-width: 10rem;">
+        {% endif %}
+    </td>
+    <td>
+        <a href="{% url 'edit_product' product.pk%}">
+            <button>
+                Edit
+            </button>
+        </a>
+    </td>
+    <td>
+        <a href="{% url 'delete_product' product.pk %}">
+            <button>
+                Delete
+            </button>
+        </a>
+    </td>
 </tr>
 {% endfor %}
 </table>
