--- a/main/templates/edit_product.html
+++ b/main/templates/edit_product.html
@@ -1,16 +1,19 @@
-{% extends 'app.html' %} 
+{% extends 'base.html' %}
+
+{% load static %}
 
 {% block content %}
-<h1>Add New Product</h1>
 
-<form method="post" enctype="multipart/form-data">
+<h1>Edit Mood</h1>
+
+<form method="POST">
     {% csrf_token %}
     <table>
         {{ form.as_table }}
         <tr>
             <td></td>
             <td>
-                <input type="submit" value="Add Product"/>
+                <input type="submit" value="Edit Mood"/>
             </td>
         </tr>
     </table>
