--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -1,21 +1,20 @@
-{% extends 'app.html' %}
+{% extends 'base.html' %}
 
 {% block meta %}
-<title>Register</title>
+<title>Login</title>
 {% endblock meta %}
 
 {% block content %}
-
 <div class="login">
-  <h1>Register</h1>
+  <h1>Login</h1>
 
-  <form method="POST">
+  <form method="POST" action="">
     {% csrf_token %}
     <table>
       {{ form.as_table }}
       <tr>
         <td></td>
-        <td><input type="submit" name="submit" value="Daftar" /></td>
+        <td><input class="btn login_btn" type="submit" value="Login" /></td>
       </tr>
     </table>
   </form>
@@ -26,7 +25,8 @@
     <li>{{ message }}</li>
     {% endfor %}
   </ul>
-  {% endif %}
+  {% endif %} Don't have an account yet?
+  <a href="{% url 'register' %}">Register Now</a>
 </div>
 
 {% endblock content %}
