--- a/templates/base.html
+++ b/templates/base.html
@@ -7,9 +7,8 @@
             name="viewport"
             content="width=device-width, initial-scale=1.0"
         />
-        <link rel="stylesheet" href="{% static 'styles/style.css' %}">
-        {% block meta %}
-        {% endblock meta %}
+        {% block meta %}{% endblock meta %}
+        <script src="https://cdn.tailwindcss.com"></script>
     </head>
 
     <body>
