--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -6,27 +6,74 @@
 
 {% block content %}
 
-<div class="login">
-  <h1>Register</h1>
 
-  <form method="POST">
-    {% csrf_token %}
-    <table>
-      {{ form.as_table }}
-      <tr>
-        <td></td>
-        <td><input type="submit" name="submit" value="Daftar" /></td>
-      </tr>
-    </table>
-  </form>
+<div 
+    class="
+        flex items-center justify-center min-h-screen
+    ">
+    <div 
+        class="
+            w-full max-w-md
+        ">
 
-  {% if messages %}
-  <ul>
-    {% for message in messages %}
-    <li>{{ message }}</li>
-    {% endfor %}
-  </ul>
-  {% endif %}
+        {% for message in messages %}
+        <div class="alert {{ message.tags }} alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            {{ message | safe }}
+        </div>
+        {% endfor %}
+
+        <h2 class="text-center font-extrabold text-3xl">Register</h2>
+        <form method='POST' action=''> 
+            {% csrf_token %}
+            <div>
+              {% include 'input_section.html' with text='Username' type='text'  for='username' value=form.username.value %}
+
+              {% if form.username.errors %}
+                  <div class="text-red-500">
+                      {% for error in form.username.errors %}
+                          <p>{{ error }}</p>
+                      {% endfor %}
+                  </div>
+              {% endif %}
+
+              {% include 'input_section.html' with text='Password' type='password' for='password1' value=form.username.password1%}
+
+              {% if form.password1.errors %}
+                  <div class="text-red-500">
+                      {% for error in form.password1.errors %}
+                          <p>{{ error }}</p>
+                      {% endfor %}
+                  </div>
+              {% endif %}
+
+              {% include 'input_section.html' with text='Confirmation Password' type='password' for='password2' value=form.username.password2%}
+
+              {% if form.password2.errors %}
+                  <div class="text-red-500">
+                      {% for error in form.password2.errors %}
+                          <p>{{ error }}</p>
+                      {% endfor %}
+                  </div>
+              {% endif %}
+            </div>
+            {% include 'button.html' with text='Submit' color='blue'%}
+        </form>
+        {% if messages %}
+          <ul class="mb-4 text-red-600">
+            {% for message in messages %}
+              <li class="mb-2">{{ message }}</li>
+            {% endfor %}
+          </ul>
+        {% endif %}
+        <p class="text-center">
+          Already have an account?
+          <a href="{% url 'login' %}" class="text-blue-500 hover:underline">Login Now</a>
+        </p>
+
+    </div>
 </div>
 
 {% endblock content %}
