--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -1,32 +1,38 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
 {% block meta %}
-<title>Login</title>
+    <title>Login Page</title>
 {% endblock meta %}
 
 {% block content %}
-<div class="login">
-  <h1>Login</h1>
-
-  <form method="POST" action="">
-    {% csrf_token %}
-    <table>
-      {{ form.as_table }}
-      <tr>
-        <td></td>
-        <td><input class="btn login_btn" type="submit" value="Login" /></td>
-      </tr>
-    </table>
-  </form>
-
-  {% if messages %}
-  <ul>
-    {% for message in messages %}
-    <li>{{ message }}</li>
-    {% endfor %}
-  </ul>
-  {% endif %} Don't have an account yet?
-  <a href="{% url 'register' %}">Register Now</a>
+<div 
+    class="
+        flex items-center justify-center min-h-screen
+    ">
+    <div 
+        class="
+            w-full max-w-md
+        ">
+        <h2 class="text-center font-extrabold text-3xl">Login</h2>
+        <form method='POST' action=''> 
+            {% csrf_token %}
+            <div>
+              {% include 'input_section.html' with text='Username' type='username'  for='username'%}
+              {% include 'input_section.html' with text='Password' type='password' for='password' %}
+            </div>
+            {% include 'button.html' with text='Submit' color='blue'%}
+        </form>
+        {% if messages %}
+          <ul class="mb-4 text-red-600">
+            {% for message in messages %}
+              <li class="mb-2">{{ message }}</li>
+            {% endfor %}
+          </ul>
+        {% endif %}
+        <p class="text-center">
+          Don't have an account yet?
+          <a href="{% url 'register' %}" class="text-blue-500 hover:underline">Register Now</a>
+        </p>
+    </div>
 </div>
-
 {% endblock content %}
