--- a/main/templates/create_product.html
+++ b/main/templates/create_product.html
@@ -13,14 +13,16 @@
         <h2 class="text-center font-extrabold text-3xl">Add Product</h2>
         <form method='POST' enctype="multipart/form-data"> 
             {% csrf_token %}
-            <div>
+            <div class="mb-4 ml-4 mr-4">
                 {% include 'input_section.html' with text='Name' type='text' for='name' %}
                 {% include 'input_section.html' with text='Price' type='number' for='price' %}
                 {% include 'input_section.html' with text='Description' type='text' for='description' %}
                 {% include 'input_section.html' with text='Stock Available' type='number' for='stock_available' %}
                 {% include 'input_section.html' with text='Photo' type='file' for='photo' %}
             </div>
-            {% include 'button.html' with text='Submit' color='blue'%}
+            <div class="mb-4 ml-4 mr-4">
+                {% include 'button.html' with text='Submit' color='blue'%}
+            </div>
         </form>
     </div>
 </div>
