--- a/main/templates/view_all_product.html
+++ b/main/templates/view_all_product.html
@@ -30,7 +30,7 @@
 
 {% else %}
 
-<div class="p-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
+<div class="p-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 justify-items-center">
     {% for product in products %}
         {% include 'product_card.html' %}
     {% endfor %}
