--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="sticky top-0 bg-white shadow-md p-4">
+<nav class="sticky top-0 bg-white shadow-md p-4 z-50">
     <div class="flex justify-between">
         <div class="font-mono font-bold">ASADELSTORE</div>
 
