--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -23,7 +23,7 @@
     </div>
 
     <!-- Mobile Menu -->
-    <div id="mobile-menu" class="flex flex-col gap-4">
+    <div id="mobile-menu" class="hidden flex-col gap-4">
         <span>{{ user.username }} || PBP {{class}} || {{npm}}</span>
         {% include 'button.html' with text='Logout' href='logout' color='red'%}
     </div>
@@ -36,6 +36,7 @@
     // Toggle Mobile Menu
     mobileMenuButton.onclick = function () {
         mobileMenu.classList.toggle('hidden');
+        mobileMenu.classList.toggle('flex')
     };
 
     // When desktop mode / width is >= 768 (md breakpoint for Tailwind), hide mobile menu
